manifests/traefik-crds.yaml
apiVersion: v1
items:
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"ollama-ai-gateway","namespace":"ai"},"spec":{"entryPoints":["web"],"routes":[{"kind":"Rule","match":"PathPrefix(`/api`)","middlewares":[{"name":"ai-ratelimit","namespace":"ai"}],"services":[{"name":"ollama","port":11434}]}]}}
    creationTimestamp: "2026-05-24T02:29:18Z"
    generation: 1
    name: ollama-ai-gateway
    namespace: ai
    resourceVersion: "39897"
    uid: 1c8de71a-eed4-407e-8284-c06a63539caa
  spec:
    entryPoints:
    - web
    routes:
    - kind: Rule
      match: PathPrefix(`/api`)
      middlewares:
      - name: ai-ratelimit
        namespace: ai
      services:
      - name: ollama
        port: 11434
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"litellm-ai-gateway","namespace":"aigateway"},"spec":{"entryPoints":["web"],"routes":[{"kind":"Rule","match":"PathPrefix(`/v1`)","services":[{"name":"litellm","port":4000}]}]}}
    creationTimestamp: "2026-05-24T02:39:57Z"
    generation: 1
    name: litellm-ai-gateway
    namespace: aigateway
    resourceVersion: "40761"
    uid: 5dce8905-5db2-452f-9e4d-b487a4f24ce5
  spec:
    entryPoints:
    - web
    routes:
    - kind: Rule
      match: PathPrefix(`/v1`)
      services:
      - name: litellm
        port: 4000
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      meta.helm.sh/release-name: traefik
      meta.helm.sh/release-namespace: gateway
    creationTimestamp: "2026-05-23T16:20:41Z"
    generation: 1
    labels:
      app.kubernetes.io/instance: traefik-gateway
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: traefik
      helm.sh/chart: traefik-40.2.0
    name: traefik-dashboard
    namespace: gateway
    resourceVersion: "4041"
    uid: b6ddf580-63e5-47b7-a709-98938a0b7d64
  spec:
    entryPoints:
    - traefik
    routes:
    - kind: Rule
      match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
      services:
      - kind: TraefikService
        name: api@internal
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"mcp-gateway","namespace":"mcp"},"spec":{"entryPoints":["web"],"routes":[{"kind":"Rule","match":"PathPrefix(`/mcp`)","middlewares":[{"name":"mcp-strip-prefix","namespace":"mcp"}],"services":[{"name":"mcp-tool-server","port":7000}]}]}}
    creationTimestamp: "2026-05-24T03:04:55Z"
    generation: 1
    name: mcp-gateway
    namespace: mcp
    resourceVersion: "43054"
    uid: 8f92b8a5-4b90-408e-8bee-346d79bfabad
  spec:
    entryPoints:
    - web
    routes:
    - kind: Rule
      match: PathPrefix(`/mcp`)
      middlewares:
      - name: mcp-strip-prefix
        namespace: mcp
      services:
      - name: mcp-tool-server
        port: 7000
- apiVersion: traefik.io/v1alpha1
  kind: Middleware
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"Middleware","metadata":{"annotations":{},"name":"ai-auth","namespace":"ai"},"spec":{"headers":{"customRequestHeaders":{"X-AI-Gateway":"traefik-lab"}}}}
    creationTimestamp: "2026-05-24T02:19:28Z"
    generation: 1
    name: ai-auth
    namespace: ai
    resourceVersion: "39128"
    uid: afc48aac-6fd4-4517-8f4c-ddb64be234b2
  spec:
    headers:
      customRequestHeaders:
        X-AI-Gateway: traefik-lab
- apiVersion: traefik.io/v1alpha1
  kind: Middleware
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"Middleware","metadata":{"annotations":{},"name":"ai-ratelimit","namespace":"ai"},"spec":{"rateLimit":{"average":1,"burst":1}}}
    creationTimestamp: "2026-05-24T02:19:32Z"
    generation: 2
    name: ai-ratelimit
    namespace: ai
    resourceVersion: "39888"
    uid: 1aa66f2c-83fe-4a95-8f47-41e332f9d5c4
  spec:
    rateLimit:
      average: 1
      burst: 1
- apiVersion: traefik.io/v1alpha1
  kind: Middleware
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"Middleware","metadata":{"annotations":{},"name":"mcp-strip-prefix","namespace":"mcp"},"spec":{"stripPrefix":{"prefixes":["/mcp"]}}}
    creationTimestamp: "2026-05-24T03:04:55Z"
    generation: 1
    name: mcp-strip-prefix
    namespace: mcp
    resourceVersion: "43055"
    uid: 784792fa-e36d-4820-9799-d437a6568405
  spec:
    stripPrefix:
      prefixes:
      - /mcp
kind: List
metadata:
  resourceVersion: ""
